--- a/style.css
+++ b/style.css
@@ -927,3 +927,12 @@ a {
     }
 }
 
+/* mapa */
+#map {
+    height: 400px; /* Altura del mapa */
+    width: 100%;   /* Ancho del mapa */
+    border-radius: 8px; /* Bordes redondeados para el mapa */
+    margin-top: 20px; /* Espacio superior */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra para el mapa */
+}
+
